# gsf

./: .gitattributes  .gitignore  README.md  SECURITY.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  config-file.yml
Contributor Resources/: Check-in Rules.txt
Contributor Resources/AddIns/: Connect.vb  GPACodeHeaderAddIn.AddIn  Readme.txt
Contributor Resources/Extensions/: GPAVSExtension.vsix  GPAVSExtension2017.vsix  GPAVSExtension2019.vsix  GPAVSExtension2022.vsix  Readme.txt
Contributor Resources/Macros/: ProjectMacros.vb  Readme.txt
Contributor Resources/Snippets/: Readme.txt  Regions.snippet  disposable.snippet  disposec.snippet  idisposable.snippet  idisposableunmanaged.snippet  ipersistsettings.snippet  iprovidestatus.snippet  istatusprovider.snippet  isupportinitialize.snippet  isupportlifecycle.snippet
Contributor Resources/Tools/Build Tools/: Readme.txt
Source/: .editorconfig  Directory.Build.props  GSF.Core.Tests.vsmdi  GSF.DotSettings  GSF.snk  GridSolutionsFramework-disruptor.sln  GridSolutionsFramework.sln  GridSolutionsFramework.sln.DotSettings  GridSolutionsFramework.testrunconfig  GridSolutionsFramework4.5.2.sln  LICENSE.txt  NOTICE.txt  UpgradeLog.XML  UpgradeLog.htm  buildmono  buildmono.sh  nuget.config  package.json
Source-TSE-12032013/: GridSolutionsFramework.testrunconfig
Source-TSE-12032013/Applications/DataPublisherTest/: Program.cs
Source-TSE-12032013/Applications/TsfManager/: MainWindow.xaml.cs  Menu.xml  app.config
Source-TSE-12032013/Libraries/GSF.COMTRADE/: AnalogChannel.cs  ChannelMetadata.cs  SampleRate.cs  Timestamp.cs
Source-TSE-12032013/Libraries/GSF.Communication/: FileClient.cs  IServer.cs  SerialClient.cs  TlsServer.cs
Source-TSE-12032013/Libraries/GSF.Core/: CharExtensions.cs  Common.cs  NumericExtensions.cs  PrecisionTimer.cs  ProcessProgress.cs  ProcessProgressHandler.cs  TVA.Core.nuspec
Source-TSE-12032013/Libraries/GSF.Historian/: NamespaceDoc.cs  TimeTag.cs
Source-TSE-12032013/Libraries/GSF.PhasorProtocols/: AnalogValueCollection.cs  ChannelBase.cs  ChannelCellParsingStateBase.cs  ChannelDefinitionBase.cs  ChannelFrameCollectionBase.cs  Common.cs  (+16 more)
Source-TimeSeriesEntity/: GridSolutionsFramework.sln  UpgradeLog.XML  UpgradeLog.htm  nuget.config
Source/Documentation/: CommonStatistics.md  FilterExpressions.md  GrafanaFunctions.md
Source/Libraries/TimeSeriesPlatformLibrary/: CMakeLists.txt  README.md  README.txt  TimeSeriesPlatformLibrary.vcxproj  TimeSeriesPlatformLibrary.vcxproj.filters
Source/Libraries/TimeSeriesPlatformLibrary/Common/: CommonTypes.cpp  CommonTypes.h  Convert.cpp  Convert.h  Date.h  EndianConverter.cpp  EndianConverter.h  Measurement.h  Nullable.h  ThreadSafeQueue.h  Timer.h  Types.h  Version.h  Version.h.in
Source/Libraries/TimeSeriesPlatformLibrary/Data/: DataColumn.cpp  DataColumn.h  DataRow.cpp  DataRow.h  DataSet.cpp  DataSet.h  DataTable.cpp  DataTable.h
Source/Libraries/TimeSeriesPlatformLibrary/DataSet/: DataColumn.cpp  DataColumn.h  DataRow.cpp  DataRow.h  DataSet.cpp  DataSet.h  DataTable.cpp  DataTable.h
Source/Libraries/TimeSeriesPlatformLibrary/FilterExpressions/: CompileGrammar.bat  ExpressionTree.cpp  ExpressionTree.h  FilterExpressionParser.cpp  FilterExpressionParser.h  FilterExpressionSyntax.interp  FilterExpressionSyntaxLexer.cpp  FilterExpressionSyntaxLexer.h  FilterExpressionSyntaxLexer.interp  FilterExpressionSyntaxListener.cpp  FilterExpressionSyntaxParser.cpp  FilterExpressionSyntaxParser.h  FilterExpressions.h
Source/Libraries/TimeSeriesPlatformLibrary/FilterExpressions/antlr4-runtime/: NoViableAltException.cpp  NoViableAltException.h
Source/Libraries/TimeSeriesPlatformLibrary/FilterExpressions/antlr4-runtime/atn/: ATNState.h  ParserATNSimulator.h
Source/Libraries/TimeSeriesPlatformLibrary/FilterExpressions/antlr4-runtime/support/: BitSet.h
Source/Libraries/TimeSeriesPlatformLibrary/Samples/: AdvancedPublish.cpp  AdvancedSubscribe.cpp  AverageFrequencyCalculator.cpp  FilterExpressionTests.cpp  GenHistory.cpp  GenHistory.h  History.xml  InstancePublish.cpp  InstanceSubscribe.cpp  MetadataSample2.xml  PublisherHandler.cpp  PublisherHandler.h  SimplePublish.cpp  SimpleSubscribe.cpp  SubscriberHandler.cpp  SubscriberHandler.h  SubscriberInstance.cpp  SubscriberInstance.h  TemporalSubscriber.cpp  TemporalSubscriber.h
Source/Libraries/TimeSeriesPlatformLibrary/Transport/: ActiveMeasurementsSchema.cpp  ActiveMeasurementsSchema.h  ActiveMeasurementsSchema.xml  CompactMeasurement.cpp  CompactMeasurement.h  CompactMeasurementParser.cpp  CompactMeasurementParser.h  Constants.cpp  Constants.h  Convert.cpp  Convert.h  DataPublisher.cpp  DataPublisher.h  DataSubscriber.cpp  DataSubscriber.h  GatewayMeasurementParser.h  MetadataSchema.cpp  MetadataSchema.h  MetadataSchema.xml  PublisherInstance.cpp  PublisherInstance.h  RoutingTables.cpp  RoutingTables.h  SignalIndexCache.cpp  SignalIndexCache.h  SubscriberConnection.cpp  SubscriberConnection.h  SubscriberInstance.cpp  SubscriberInstance.h  TSSCDecoder.cpp  TSSCDecoder.h  TSSCEncoder.cpp  TSSCEncoder.h  TSSCMeasurementParser.cpp  TSSCMeasurementParser.h  TemporalSubscriberConnection.cpp  TemporalSubscriberConnection.h  TransportTypes.cpp  TransportTypes.h  Types.cpp  (+2 more)
Source/Libraries/TimeSeriesPlatformLibrary/Transport/FilterExpressions/: CompileGrammar.bat  ExpressionTree.cpp  ExpressionTree.h  FilterExpressionParser.cpp  FilterExpressionParser.h  FilterExpressionSyntax.g4  FilterExpressionSyntax.interp  FilterExpressionSyntax.tokens  FilterExpressionSyntaxBaseListener.cpp  FilterExpressionSyntaxBaseListener.h  FilterExpressionSyntaxLexer.cpp  FilterExpressionSyntaxLexer.h  FilterExpressionSyntaxLexer.interp  FilterExpressionSyntaxLexer.tokens  FilterExpressionSyntaxListener.h  FilterExpressionSyntaxParser.cpp  FilterExpressionSyntaxParser.h  ReadMe.txt
Source/PowerCalculations.UI/: PowerCalculation.cs  PowerCalculations.UI.csproj
Source/PowerCalculations.UI.WPF/: PowerCalculations.UI.WPF.csproj
Source/Scripts/: check-share-auth.ps1
Source/db/: uuid
(+14211 files in other folders)
